--- a/main.ipynb
+++ b/main.ipynb
@@ -12,12 +12,13 @@
      "text": [
       "Collecting package metadata (current_repodata.json): done\n",
       "Solving environment: failed with initial frozen solve. Retrying with flexible solve.\n",
-      "Collecting package metadata (repodata.json): - "
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: \\ "
      ]
     }
    ],
    "source": [
-    "!conda install tensorflow-gpu==1.8 -y"
+    "!conda install tensorflow-gpu==1.8 -c anaconda -y"
    ]
   },
   {
